# services

./: .bazelrc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .golangci.yaml  BUILD.bazel  Dockerfile.apisix  Dockerfile.impulse-svc  Dockerfile.service  Dockerfile.standalone  Makefile  Procfile.standalone  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-services  bazel-testlogs  buf.gen.yaml  buf.yaml  dapr.yaml  dapr_run.yaml  deps.bzl  devenv.nix  docker-run-migrations-impulse-svc.sh  docker-run-migrations.sh  down.sh  go.mod  go.sum  go.work  go.work.sum  lint.sh  migrate-spicedb.sh  migrate.sh  models.sh  protos.sh  renovate.json  shell.sh  spice.go  (+3 more)
.build/: service.Dockerfile
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUST_TEMPLATE.md  dependabot.yaml
apisix/: .env.example  Procfile.apisix  README.md  apisix.yaml  apisix_config.dev.yaml  apisix_config.yaml  fly.toml
dapr/: config.yaml
dev/: apisix_config.yaml  dapr.yaml  dapr_run.yaml  docker-compose.yaml  init.sql  servers.json  spice.go
devenv/: scripts.nix
eventstoredb/: fly.staging.toml  fly.toml
fga/: fga.mod  team.fga  team.fga.yaml  team_invite.fga.yaml  test.sh
infrastructure/: README.md
libs/common/: BUILD.bazel  auth.go  conflict.go  consistency.go  dapr.go  errors.go  export_test.go  go.mod  go.sum  grpc.go  grpc_test.go  jwt.go  keycloak.go  otel.go  setup.go
libs/common/auth/: auth.go  auth_test.go
libs/common/hwerr/: err.go
libs/common/hwgrpc/: auth_interceptor.go  db_interceptor.go  db_interceptor_test.go  error_quality_control_interceptor.go  export_test.go  hwgrpc_test.go  locale_interceptor.go  locale_interceptor_test.go  logging_interceptor.go  organization_interceptor.go  panic_interceptor.go  panic_interceptor_test.go  span_interceptor.go  validate_interceptor.go  wrapped_server_stream.go  wrapper_stream.go
libs/common/locale/: locale.de.toml  locale.en.toml  locale.go
libs/common/test/: grpc.go  grpc_test.go
libs/hwgorm/: BUILD.bazel  go.mod  go.sum  logger.go  pagination.go  point.go  setup.go
libs/hwutil/: BUILD.bazel  arrays.go  arrays_test.go  assert.go  contains_test.go  env.go  go.mod  go.sum  io.go  maps.go  maps_test.go  optionals.go  parse.go  parse_test.go  random.go  types.go  util.go
libs/hwutil/errs/: casts.go  maps.go
libs/logging/: BUILD.bazel  go.mod  go.sum  otel.go  setup.go  util.go
nix/: protoc-go-inject-tag.nix
proto/: README.md
services/emergency-room-svc/: .env.example  BUILD.bazel  Dockerfile  README.md  go.mod  go.sum  main.go
services/emergency-room-svc/api/: BUILD.bazel  emergency-room-svc.pb.go  emergency-room-svc.proto  emergency-room-svc_grpc.pb.go  helpers.go  v1.go
services/emergency-room-svc/migrations/: 000001_init.down.sql  000001_init.up.sql  mocks.sql
services/emergency-room-svc/models/: BUILD.bazel  department.go  er.go
services/user-svc/: .dockerignore  .env.example  BUILD.bazel  Dockerfile  README.md  fly.production.toml  fly.staging.toml  fly.toml  go.mod  go.sum  integration_tests.sh  main.go  schema.sql  sqlc.yaml
services/user-svc/api/: BUILD.bazel  logging.go  user-events.pb.go  user-events.proto  user-svc.pb.go  user-svc.proto  user-svc_grpc.pb.go  v1.go
services/user-svc/cmd/service/: main.go
services/user-svc/integration_tests/: 01.GetOrganizations.exec  01.GetOrganizations.expected  02.GetOrganizationByUser.exec  02.GetOrganizationByUser.expected  03.GetOrganizationsForUser.exec  03.GetOrganizationsForUser.expected  04.UpdateOrganization.exec  04.UpdateOrganization.expected  05.GetMembersByOrganization.exec  05.GetMembersByOrganization.expected  06.AddRemoveMember.exec  06.AddRemoveMember.expected  07.GetInvitationsByOrganization.exec  07.GetInvitationsByOrganization.expected  08.CreateUser.exec  08.CreateUser.expected  09.ReadPublicProfile.exec  09.ReadPublicProfile.expected  10.GetInvitationsByUser.exec  10.GetInvitationsByUser.expected  11.DeclineInvitation.exec  11.DeclineInvitation.expected  12.AcceptInvitation.exec  12.AcceptInvitation.expected  13.RevokeInvitation.exec  13.RevokeInvitation.expected  seed.sql
services/user-svc/internal/fga/: permissions.go
services/user-svc/internal/hwkc/: builder.go  client.go  errs.go  fake_client.go  models.go  noop_client.go
services/user-svc/internal/models/: organisation_models.go  user_models.go
services/user-svc/internal/organization/: organization.go
services/user-svc/internal/organization/perm/: perm.go
services/user-svc/internal/repositories/: organisation_repository.go  user_repository.go
services/user-svc/internal/user/: user.go
services/user-svc/internal/user/perm/: perm.go
services/user-svc/locale/: locale.de.toml  locale.en.toml  locale.go
services/user-svc/migrations/: 000001_init.down.sql  000001_init.up.sql  000002_init.down.sql  000002_init.up.sql  000002_invitations.down.sql  000003_init.down.sql  000003_members_is_admin.down.sql  000003_members_is_admin.up.sql  000004_drop_invitation_state.down.sql  000004_drop_invitation_state.up.sql  000004_init.up.sql  000005_memberships_no_dupes.down.sql  000005_users.up.sql  000006_memberships_no_dupes.up.sql  000007_user_avatar_url.down.sql  000007_user_avatar_url.up.sql  000008_backfill_is_personal.down.sql  000008_backfill_is_personal.up.sql  000009_drop_is_admin.down.sql  000009_drop_is_admin.up.sql
services/user-svc/models/: BUILD.bazel  organization.go  user.go
services/user-svc/repos/: organization_repo.sql  user_repo.sql
services/user-svc/repos/organization-repo/: db.go  models.go  organization_repo.sql.go
services/user-svc/repos/organization_repo/: db.go  models.go  organization_repo.sql.go
services/user-svc/repos/user-repo/: db.go  models.go  user_repo.sql.go
services/user-svc/repos/user_repo/: db.go  models.go  user_repo.sql.go
services/user-svc/stories/: OrganizationCRUD_test.go  setup_test.go
spicedb/: README.md  bed.test.yaml  bed.zed  core.test.yaml  core.zed  organization.test.yaml  organization.zed  organization_invites.test.yaml  patient.test.yaml  patient.zed  property.test.yaml  property.zed  room.test.yaml  (+10 more)
(+1074 files in other folders)
