load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "hwutil",
    srcs = [
        "env.go",
        "io.go",
        "parse.go",
    ],
    importpath = "github.com/helpwave/services/libs/hwutil",
    visibility = ["//visibility:public"],
    deps = ["@com_github_go_playground_validator_v10//:go_default_library"],
)
