load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logging",
    srcs = ["setup.go"],
    importpath = "github.com/helpwave/services/libs/logging",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
    ],
)
