load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = [
        "department.go",
        "er.go",
    ],
    importpath = "github.com/helpwave/services/services/emergency-room-svc/models",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/hwgorm",
        "@com_github_google_uuid//:go_default_library",
    ],
)
