load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = [
        "organization.go",
        "user.go",
    ],
    importpath = "github.com/helpwave/services/services/user-svc/models",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_uuid//:go_default_library"],
)
